build.log
TEKNO@TEKNO-PC MINGW64 ~/quickReLoader
$ make
make -f Makefile.applet
make[1]: Entering directory '/home/TEKNO/quickReLoader'
payload.cpp
rtc_r2p.cpp
util.cpp
main.cpp
ams_bpc.c
ini.c
reboot_to_payload.c
linking quickReLoader.elf
built ... quickReLoader.nacp
built ... quickReLoader.nro
make[1]: Leaving directory '/home/TEKNO/quickReLoader'
make -f Makefile.overlay
make[1]: Entering directory '/home/TEKNO/quickReLoader'
payload.cpp
rtc_r2p.cpp
util.cpp
main.cpp
In file included from C:/msys64/home/TEKNO/quickReLoader/overlay/main.cpp:20:
C:/msys64/home/TEKNO/quickReLoader/lib/libtesla/include/tesla.hpp: In member function 'virtual void tsl::elm::OverlayFrame::draw(tsl::gfx::Renderer*)':
C:/msys64/home/TEKNO/quickReLoader/lib/libtesla/include/tesla.hpp:3771:25: error: suggest explicit braces to avoid ambiguous 'else' [-Werror=dangling-else]
 3771 |                 else if (inMainMenu)
      |                         ^
In file included from C:/msys64/home/TEKNO/quickReLoader/lib/libultra/include/ultra.hpp:123,
                 from C:/msys64/home/TEKNO/quickReLoader/lib/libtesla/include/tesla.hpp:43:
C:/msys64/home/TEKNO/quickReLoader/lib/libultra/include/hex_funcs.hpp: In function 'std::string hexToDecimal(const std::string&)':
C:/msys64/home/TEKNO/quickReLoader/lib/libultra/include/hex_funcs.hpp:128:22: error: 'value' may be used uninitialized [-Werror=maybe-uninitialized]
  128 |         decimalValue = decimalValue * 16 + value;
      |         ~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~
C:/msys64/home/TEKNO/quickReLoader/lib/libultra/include/hex_funcs.hpp:114:13: note: 'value' was declared here
  114 |         int value;
      |             ^~~~~
cc1plus.exe: all warnings being treated as errors
make[2]: *** [/opt/devkitpro/devkitA64/base_rules:16: main.o] Error 1
make[1]: *** [Makefile.overlay:172: build.ovl] Error 2
make[1]: Leaving directory '/home/TEKNO/quickReLoader'
make: *** [Makefile:10: overlay] Error